# otus_cpp_5UML

./: CMakeLists.txt  DocView.cpp  DocView.h  DocView.ui  Otus_cpp_5.zargo  PrimitiveController.cpp  PrimitiveController.h  PrimitiveModel.cpp  PrimitiveModel.h  README.md  main.cpp
.github/workflows/: release.yml
